--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-
 ###> symfony/framework-bundle ###
 /.env.local
 /.env
+/.env.test
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
@@ -10,3 +10,13 @@
 /vendor/
 /.bash_history
 ###< symfony/framework-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
